Update Fiction “2025-11-20-retest-1”

--- a/fiction/2025-11-20-retest-1.md
+++ b/fiction/2025-11-20-retest-1.md
@@ -2,5 +2,6 @@
 title: retest
 date: 2025-11-20T20:51:10.531Z
 cover: /images/uploads/img_4670.jpeg
+audio: /images/uploads/latashiya_sample_050919.mp3
 ---
 reretest
